--- a/currencyConvertor.html
+++ b/currencyConvertor.html
@@ -1,3 +1,8 @@
+<!-- 
+NOTE TO VIEWERS / DEVELOPERS:
+The currency converter API I was using has stopped working.
+If you know any free + reliable currency exchange API, please suggest!
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
